--- a/design.css
+++ b/design.css
@@ -580,7 +580,14 @@ main {
         display: flex;
     }
 }
-
+@media only screen and (max-width:400px) {
+    b {
+        font-size: 13px;
+    }
+    h4{
+        font-size: 13px;
+    }
+}
 #mh-skills .row .mh-professional-skill {
     flex-basis: 40%;
     min-width: 40%;
